--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 </head>
 <body>
 
-    <h1>Fazenda do Tio João</h1>
+    <h1>o melhor do mundo</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_boi">Boi</button>
-        <button class="tecla tecla_cachorro">Cão</button>
-        <button class="tecla tecla_cavalo">Cavalo</button>
+        <button class="tecla tecla_boi">aaaa</button>
+        <button class="tecla tecla_cachorro">o melhor</button>
+        <button class="tecla tecla_cavalo">17</button>
 
-        <button class="tecla tecla_gato">Gato</button>
-        <button class="tecla tecla_ovelha">Ovelha</button>
-        <button class="tecla tecla_papagaio">Louro</button>
+        <button class="tecla tecla_gato">iiii</button>
+        <button class="tecla tecla_ovelha">corno</button>
+        <button class="tecla tecla_papagaio">ou</button>
 
-        <button class="tecla tecla_passaro">Pássaro</button>
-        <button class="tecla tecla_pato">Pato</button>
-        <button class="tecla tecla_porco">Porco</button>
+        <button class="tecla tecla_passaro">credo</button>
+        <button class="tecla tecla_pato">Pare</button>
+        <button class="tecla tecla_porco">não</button>
     </section>
 
-    <audio src="sounds/Boi.wav" id="som_tecla_boi"></audio>
-    <audio src="sounds/Cachorro.wav" id="som_tecla_cachorro"></audio>
-    <audio src="sounds/Cavalo.wav" id="som_tecla_cavalo"></audio>
-    <audio src="sounds/Gato.wav" id="som_tecla_gato"></audio>
-    <audio src="sounds/Ovelha.wav" id="som_tecla_ovelha"></audio>
-    <audio src="sounds/Papagaio.wav" id="som_tecla_papagaio"></audio>
-    <audio src="sounds/Pássaro.wav" id="som_tecla_passaro"></audio>
-    <audio src="sounds/Pato.wav" id="som_tecla_pato"></audio>
-    <audio src="sounds/Porco.mp3" id="som_tecla_porco"></audio>
+    <audio src="sounds/aaaaaaaa-online-audio-converter_r9waVUO.mp3" id="som_tecla_boi"></audio>
+    <audio src="sounds/beligol-beligol (1).mp3" id="som_tecla_cachorro"></audio>
+    <audio src="sounds/bolsonaro-risada.mp3" id="som_tecla_cavalo"></audio>
+    <audio src="sounds/chega-de-frescura-e-mimimi.mp3" id="som_tecla_gato"></audio>
+    <audio src="sounds/corno-chifrudo.mp3" id="som_tecla_ovelha"></audio>
+    <audio src="sounds/oooh-my-god-vine-mp3cut (2).mp3" id="som_tecla_papagaio"></audio>
+    <audio src="sounds/para-de-mentir-lula (1).mp3" id="som_tecla_passaro"></audio>
+    <audio src="sounds/que-isso-moreno.mp3" id="som_tecla_pato"></audio>
+    <audio src="sounds/windows-xp-startup_1ph012N.mp3" id="som_tecla_porco"></audio>
 <script src="main.js"></script>
  </body>
 </html>
